--- a/Login.html
+++ b/Login.html
@@ -25,7 +25,7 @@
       <input type="password" name="password" id="password" placeholder="Digite sua senha">
       <a href="#" id="forgot-pass">Esqueceu a senha?</a>
       
-      <a href="./PagAvaliacao.html" id="entraravaliacao"> 
+      <a href="./avaliacao.html" id="entraravaliacao"> 
       <input type="button" value="Entrar">
       </a>  
     </form>
