--- a/cadastre-se.html
+++ b/cadastre-se.html
@@ -61,7 +61,9 @@
                     <span class="form__message-error" data-error-message>Campo obrigatório</span>
                 </div>
                 <div class="form__group form__group--center">
-                    <button class="form__button-submit" type="submit">Enviar</button>
+                    <a href="./Login.html" id="entraravaliacao"> 
+                        <button class="form__button-submit" type="submit">Enviar</button>
+                        </a>                     
                 </div>
             </form>
         </div>
