--- a/Login.html
+++ b/Login.html
@@ -31,7 +31,7 @@
     </form>
     <div id="register-container">
       <p>Ainda não tem uma conta?</p>
-      <a href="#">Registrar</a>
+      <a href="./cadastre-se.html">Cadastre-se</a>
     </div>
   </div>
 </body>
