--- a/cursos/curso3.html
+++ b/cursos/curso3.html
@@ -35,7 +35,7 @@
           <p>Com Ana Silva</p>
         </div>
         <div class="enroll-button">
-          <a href="#">Começe agora!</a>
+          <a href="#">Comece agora!</a>
         </div>
       </section>
       
