--- a/cursos.html
+++ b/cursos.html
@@ -8,11 +8,15 @@
   <link rel="stylesheet" href="./assets/css/styles_login.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./assets/css/style_cursos.css">
+  <link rel="stylesheet" href="css/login_styles.css">
 </head>
 <nav class="navbar">
     <img class="logo_menu" src="./assets/img/Logo Blessed_school.png" alt="Logo_Blessed_SChool">
 </nav>
 <body>
+  <a href="./avaliacao.html" id="entraravaliacao"> 
+    <input type="button" value="Avaliação de Cursos">
+    </a> 
   <div id="login-container">
     <div class="container">
         <h1>Cursos Disponíveis</h1>
