--- a/cursos.html
+++ b/cursos.html
@@ -15,7 +15,7 @@
 </nav>
 <body>
   <a href="./avaliacao.html" id="entraravaliacao"> 
-    <input type="button" value="Avaliação de Cursos">
+    <input type="button" value="Quero avaliar o curso">
     </a> 
   <div id="login-container">
     <div class="container">
